<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".activity.MainActivity">

    <Button
        android:id="@+id/btnCurLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onClick"
        android:text="@string/select_current_location" />

    <TextView
        android:id="@+id/tvCurLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:height="100dp"
        android:singleLine="false"
        android:text="@string/current_location"
        android:textSize="20sp" />


    <Button
        android:id="@+id/btnDestLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:clickable="true"
        android:focusable="true"
        android:text="@string/select_destination_location" />

    <TextView
        android:id="@+id/tvDestLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:height="100dp"
        android:singleLine="false"
        android:text="@string/destination_lcation"
        android:textSize="20sp" />

    <ToggleButton
        android:id="@+id/tbtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:checked="false"
        android:textOff="@string/start"
        android:textOn="@string/stop" />

</LinearLayout>